<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">屌丝流水账</string>
    <string name="month_unit">月</string>
    <string name="expense_text_in_summary">支出(元)</string>
    <string name="earning_text_in_summary">收入(元)</string>
    <string name="add_item_text">来一发</string>
    <string name="default_expense_text">0.00</string>
    <string name="default_earning_text">0.00</string>
    <string name="select_month_icon_desc">select month icon</string>

    <dimen name="month_button_year_size">14sp</dimen>
    <dimen name="month_button_month_size">28sp</dimen>
    <dimen name="month_button_month_unit_size">16sp</dimen>
    <dimen name="summary_cost_size">14sp</dimen>
    <dimen name="summary_value_size">18sp</dimen>
    <dimen name="select_month_image_width">14dp</dimen>
    <dimen name="add_item_padding">8dp</dimen>
    <dimen name="add_item_text_size">20sp</dimen>

    <string name="trend_analysis_text">趋势分析</string>
    <string name="quit_text">退出</string>
    <string name="set_month_text">选择月份</string>
    <string name="cancel_text">取消</string>
    <string name="confirm_text">确定</string>

    <string-array name="day_of_week">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="no_record_hint_text">无记录</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <dimen name="list_item_height">70dp</dimen>
    <dimen name="detail_list_category_width">70dp</dimen>

    <string name="category_image_desc">category image</string>

    <dimen name="category_icon_size">50dp</dimen>
    <dimen name="category_icon_padding">5dp</dimen>
    <dimen name="list_item_left_padding">15dp</dimen>
    <dimen name="list_item_right_padding">10dp</dimen>
    <dimen name="list_item_vertical_padding">6dp</dimen>

    <string name="expense_category_text">支出类别</string>
    <string name="earning_category_text">收入类别</string>
    <string name="marked_category_text">标记记录</string>

    <dimen name="ratio_bar_height">8dp</dimen>
    <dimen name="ratio_bar_corner_radius">4dp</dimen>

    <color name="earning_color">#E090CF46</color>
    <color name="expense_color">#E0FF6000</color>

    <dimen name="month_title_padding">12dp</dimen>
    <dimen name="month_title_text_size">16sp</dimen>

    <string name="month_detail_title">本月流水</string>
    <string name="month_summary_title">月账分析</string>

    <string-array name="category_type">
        <item>支出</item>
        <item>收入</item>
    </string-array>
    <string-array name="preset_earning_types">
        <item>搬砖费</item>
        <item>小投资</item>
    </string-array>
    <string-array name="preset_expense_types">
        <item>一般</item>
        <item>餐饮</item>
        <item>购物</item>
        <item>服饰</item>
        <item>交通</item>
        <item>娱乐</item>
        <item>社交</item>
        <item>居家</item>
        <item>通讯</item>
    </string-array>

    <string name="add_category_dailog_title">请输入新类别名称</string>
    <string name="add_category_hint">最多支持四个字</string>
    <string name="add_category_duplicate_warning">类别已存在</string>
    <string name="add_category_block_warning">类别名称不能为空</string>
    <string name="modify_category_edit"> 编辑类别名称</string>
    <string name="modify_category_edit_title">请编辑类别名称</string>
    <string name="modify_category_delete">删除类别</string>
    <string name="modify_category_delete_confirm">确认删除类别</string>
    <string name="modify_category_delete_warning">类别下有记录，删除后相关记录的类别将无法正常显示</string>
    <string name="mark_text"> 标记</string>
    <string name="way_of_payment_text">结算方式</string>

    <string-array name="way_of_payment_list">
        <item>现金</item>
        <item>信用卡</item>
        <item>银行卡</item>
        <item>支付宝</item>
        <item>财付通</item>
    </string-array>

    <dimen name="key_height">50dp</dimen>
    <dimen name="delete_key_height">100dp</dimen>
    <dimen name="complete_key_height">100dp</dimen>

    <string name="detail_hint"> 说点什么&#8230;</string>
    <string name="detail_text">备注</string>
    <string name="return_text">返回</string>
    <string name="title_activity_detail_input">DetailInputActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete_text">删除</string>
    <string name="complete_text">完成</string>
    <string name="category_invalid_text">原类别已删除，请设置新类别</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="category_detail_text">类别详情</string>
    <dimen name="title_text_size">22sp</dimen>
    <dimen name="list_title_text_size">15sp</dimen>
    <dimen name="list_item_detail_text_size">16sp</dimen>
    <dimen name="list_item_value_text_size">15sp</dimen>
    <dimen name="normal_text_size">18sp</dimen>
    <dimen name="title_bar_padding">10dp</dimen>
    <dimen name="ratio_bar_margin">6dp</dimen>
    <dimen name="category_detail_vertical_margin">8dp</dimen>
    <dimen name="category_detail_vertival_padding">8dp</dimen>
    <color name="title_bar_bg">#30374D</color>
    <color name="grey_bg_color">#5A5D69</color>

</resources>
