<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${packageName}.${activityClass}" >

	<RelativeLayout
	    android:id="@+id/detailInputTitleBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:padding="@dimen/title_bar_padding"
	    android:background="@color/title_bar_bg"
	    android:gravity="center_vertical" >
	    
	    <TextView
	        android:id="@+id/detailReturn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/white"
	        android:textSize="@dimen/normal_text_size"
	        android:text="@string/return_text" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textColor="@color/white"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/detail_text" />
	    
	    <TextView
	        android:id="@+id/detailComplete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:textColor="@color/white"
	        android:textSize="@dimen/normal_text_size"
	        android:text="@string/complete_text" />
	    
	</RelativeLayout>

	<TextView
	    android:id="@+id/detailInputDateAndWay"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/detailInputTitleBar"
	    android:textSize="@dimen/list_title_text_size"
	    android:gravity="left"
	    android:background="@color/white"
    	android:paddingLeft="@dimen/list_item_left_padding" />
	
	<RelativeLayout
	    android:id="@+id/detailInputCategoryAndValue"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/detailInputDateAndWay"
	    android:gravity="center_vertical" >
	    
	</RelativeLayout>
	
	<EditText
	    android:id="@+id/detaiInputDetail"
	    android:layout_below="@+id/detailInputCategoryAndValue"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/list_item_left_padding"
	    android:hint="@string/detail_hint" />
	
</RelativeLayout>
