<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="${packageName}.${activityClass}" >
    
    <RelativeLayout
        android:id="@+id/summaryCustomTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_bar_padding"
        android:background="@color/title_bar_bg"
        android:layout_alignParentTop="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white"
            android:text="@string/app_name" />
        
        <ImageView
            android:id="@+id/menuPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:scaleType="fitCenter" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/monthSummaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/summaryCustomTitleBar"
        android:background="@color/title_bar_bg"
        android:paddingTop="@dimen/title_bar_padding"
        android:paddingBottom="@dimen/title_bar_padding"
        android:orientation="horizontal" >

		<LinearLayout
		    android:id="@+id/dateSelect"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/yearTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/grey_bg_color"
		        android:textSize="@dimen/month_button_year_size" />
		    
		    <RelativeLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		       
		        <TextView
		            android:id="@+id/monthTextView"
		      		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:textColor="@color/white"
		        	android:textSize="@dimen/month_button_month_size" />
		        
		        <TextView
		            android:id="@+id/monthUnitTextView"
		      		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_alignBottom="@id/monthTextView"
		            android:layout_toRightOf="@id/monthTextView"
		        	android:textSize="@dimen/month_button_month_unit_size"
		        	android:textColor="@color/white"
		        	android:text="@string/month_unit" />
		        
		        <ImageView
		            android:layout_toRightOf="@id/monthUnitTextView"
		            android:layout_alignTop="@id/monthUnitTextView"
		            android:layout_width="@dimen/select_month_image_width"
		            android:layout_height="@dimen/select_month_image_width"
		            android:gravity="center"
		            android:scaleType="fitCenter"
		            android:src="@drawable/down_arrow" />
		        
		    </RelativeLayout>
		
		</LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/green" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/expense_text_in_summary"
                android:textColor="@color/grey_bg_color"
                android:textSize="@dimen/summary_cost_size" />

            <TextView
                android:id="@+id/expenseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/default_expense_text"
                android:textColor="@color/white"
                android:textSize="@dimen/summary_value_size" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/earning_text_in_summary"
                android:textColor="@color/grey_bg_color"
                android:textSize="@dimen/summary_cost_size" />
            
            <TextView
                android:id="@+id/earningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/default_earning_text"
                android:textColor="@color/white"
                android:textSize="@dimen/summary_value_size" />
            
        </RelativeLayout>
        
    </LinearLayout>
	
    <RelativeLayout
        android:id="@+id/addNewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:gravity="center"
		    android:padding="@dimen/add_item_padding"
		    android:textSize="@dimen/add_item_text_size"
		    android:text="@string/add_item_text"
		    android:background="@drawable/custom_boder" />
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/summarySwitcherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/monthSummaryLayout"
        android:orientation="horizontal" >
	
        <TextView
            android:id="@+id/monthDeatilTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/month_title_padding"
            android:textSize="@dimen/month_title_text_size"
            android:text="@string/month_detail_title" />
        
        <TextView
            android:id="@+id/monthSummarylTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/month_title_padding"
            android:textSize="@dimen/month_title_text_size"
            android:text="@string/month_summary_title" />
        	
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/monthSummaryDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/summarySwitcherLayout"
        android:layout_above="@id/addNewItem"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
                
    </LinearLayout>

</RelativeLayout>